[package]
name = "wasmer-float-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasmer = { version = "3.1.0", default-features = false, features = [
#     "cranelift",
#     "singlepass",
# ] }
wasmer = "3.1.0"
rand_chacha = "0.3.1"
anyhow = "1"
